--- a/tabs_app/package.json
+++ b/tabs_app/package.json
@@ -2,6 +2,7 @@
   "name": "tabs_app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://BabiychukYuliya.github.io/tabs_test",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
